hugr-llvm/src/extension/snapshots/hugr_llvm__extension__int__test__emission@pre-mem2reg@llvm21_idivmod_u_[3].snap
---
source: hugr-llvm/src/extension/int.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

@0 = private unnamed_addr constant [24 x i8] c"Attempted division by 0\00", align 1
@prelude.panic_template = private unnamed_addr constant [34 x i8] c"Program panicked (signal %i): %s\0A\00", align 1

define internal { i8, i8 } @_hl.main.1(i8 %0, i8 %1) {
alloca_block:
  %"0" = alloca i8, align 1
  %"1" = alloca i8, align 1
  %"2_0" = alloca i8, align 1
  %"2_1" = alloca i8, align 1
  %"4_0" = alloca i8, align 1
  %"4_1" = alloca i8, align 1
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  store i8 %0, ptr %"2_0", align 1
  store i8 %1, ptr %"2_1", align 1
  %"2_01" = load i8, ptr %"2_0", align 1
  %"2_12" = load i8, ptr %"2_1", align 1
  %valid_div = icmp ne i8 %"2_12", 0
  br label %panic_if_0

panic_if_0:                                       ; preds = %entry_block
  switch i1 %valid_div, label %panic [
    i1 true, label %exit
  ]

panic:                                            ; preds = %panic_if_0
  %2 = call i32 (ptr, ...) @printf(ptr @prelude.panic_template, i32 2, ptr @0)
  call void @abort()
  br label %exit

exit:                                             ; preds = %panic_if_0, %panic
  %quotient = udiv i8 %"2_01", %"2_12"
  %remainder = urem i8 %"2_01", %"2_12"
  %3 = insertvalue { i8, i8 } poison, i8 %quotient, 0
  %4 = insertvalue { i8, i8 } %3, i8 %remainder, 1
  %5 = extractvalue { i8, i8 } %4, 0
  %6 = extractvalue { i8, i8 } %4, 1
  store i8 %5, ptr %"4_0", align 1
  store i8 %6, ptr %"4_1", align 1
  %"4_03" = load i8, ptr %"4_0", align 1
  %"4_14" = load i8, ptr %"4_1", align 1
  store i8 %"4_03", ptr %"0", align 1
  store i8 %"4_14", ptr %"1", align 1
  %"05" = load i8, ptr %"0", align 1
  %"16" = load i8, ptr %"1", align 1
  %mrv = insertvalue { i8, i8 } poison, i8 %"05", 0
  %mrv7 = insertvalue { i8, i8 } %mrv, i8 %"16", 1
  ret { i8, i8 } %mrv7
}

declare i32 @printf(ptr, ...)

declare void @abort()
